@@ -103,12 +103,14 @@ REPOSITORY
     <https://github.com/michal-josef-spacek/Error-Pure-NoDie>
 
 AUTHOR
-     Michal Josef Špaček L<skim@cpan.org>
-     http://skim.cz
+    Michal Josef Špaček skim@cpan.org
+
+    http://skim.cz
 
 LICENSE AND COPYRIGHT
-     © 2011-2020 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2020 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.05
